[package]
name = "st2"
version = "0.1.0"
authors = ["Malte <malte@sandstede.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely="0.10.0"
differential-dataflow="0.10.0"
tdiag-connect = "0.2.0"
abomonation = "0.7"
abomonation_derive = "0.3"

[dev-dependencies]
rand = "0.4.0"