[package]
name = "st2"
version = "0.1.0"
authors = ["Malte <malte@sandstede.com>"]
edition = "2018"

[dependencies]
timely = {version = "0.10.0", features = ["bincode"]}
differential-dataflow = "0.10.0"
tdiag-connect = "0.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
rand = "0.4.0"